<resources>
    <string name="app_name">Viaje</string>
    <string name="viaje">Viaje</string>
    <string name="action_settings">Settings</string>
    <string name="string_find_route">Get Directions</string>
    <string name="string_saved_route">Saved Routes</string>
    <string name="string_report_incident">Report Incident</string>
    <string name="string_statistics">Statistics</string>
    <string name="string_settings">Settings</string>
    <string name="string_about">About</string>
    <string name="string_help">Help</string>
    <string name="string_route_result">Find Route Result</string>
    <string name="string_log_out">Log Out</string>
    <string-array name="menu_array">
        <item>@string/string_statistics</item>     
        <item>@string/string_find_route</item>
        <item>@string/string_saved_route</item>
        
        <item>@string/string_settings</item>         
        
        <item>@string/string_help</item>
        <item>@string/string_log_out</item>
    </string-array>
    <string name="string_user_name">User</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_display_route">DisplayRouteActivity</string>
    <string name="title_activity_saved_route">SavedRouteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_find_route">FindRouteActivity</string>
    <string name="title_activity_report_incident">ReportIncidentActivity</string>
    <string name="title_activity_display_statistics">DisplayStatistics</string>
    <string name="title_activity_display_about">DisplayAbout</string>
    <string name="title_activity_display_help">DisplayHelp</string>
    <string name="string_my_location">Enter start location</string>
    <string name="string_end_location">Enter your destination</string>
    <string name="title_activity_clear_edit_text_line">ClearEditTextLine</string>
    <string name="title_activity_display_find_route_result">Route</string>
    <string name="desc_find_route">Find Route</string>
    <string name="title_activity_typeface_span">TypefaceSpan</string>
    <string name="find_route">Find Route</string>
    <string name="string_fastest_route">Fastest Route</string>
    <string name="string_cheapest_route">Cheapest Route</string>
    <string name="string_least_number_of_transfers_route">Least Number of Transfers Route</string>
    <string name="start">start</string>
    <string name="save_route">Save Route</string>
    <string name="end">end</string>
    <string name="string_to">to </string>
    <string name="string_destination">Destination</string>
    <string-array name="route_options_array">
        <item>@string/string_fastest_route</item>
        <item>@string/string_cheapest_route</item>
        <item>@string/string_least_number_of_transfers_route</item>
    </string-array>
    <string name="string_direction">Direction</string>
    <string name="string_take_the">Take the</string>
    <string name="openNavDrawerDesc">"Opens/Closes Navigation drawer"</string>
    <string name="title_activity_rotate_switch_icon">RotateSwitchIcon</string>
    <string name="title_activity_find_route_result">FindRouteResult</string>
    <string name="title_activity_find_route_result_list">FindRouteResultList</string>
    <string name="title_activity_find_route_result_map">FindRouteResultMap</string>
    <string name="blank_placeholder_string">-</string>
    <string name="traffic_icon_content_desc">Icon</string>
    <string name="traff_cond_label_str">Traffic Condition:</string>
    <string name="total_dist_label_str">Total Distance:</string>
    <string name="total_cost_label_str">Total Cost:</string>
    <string name="default_text_str">---</string>
    <string name="route_name_lbl_str">Route:</string>
    <string name="route_fromLoc_lbl_str">From:</string>
    <string name="route_toLoc_lbl_str">To:</string>
    <string name="route_Dist_lbl_str">Distance:</string>
    <string name="route_Cost_lbl_str">Cost:</string>
    <string name="route_traffCond_lbl_str">Condition:</string>
    <string name="title_activity_show_report_incident_pop_up">ShowReportIncidentPopUp</string>
    <string name="route_totalDist_lbl_str">Total Distance:</string>
    <string name="route_totalCost_lbl_str">Total Cost:</string>
    <string name="string_report">Report</string>
    <string name="string_report_collision">Collision</string>
    <string name="string_report_crime">Crime</string>
    <string name="string_report_flood">Flood</string>
    <string name="string_report_construction">Construction</string>
    <string name="string_report_roadblock">Section Block</string>
    <string name="string_report_traffic">Traffic</string>
    <string name="string_minor_collision">Minor</string>
    <string name="string_major_collision">Major</string>
    <string name="string_current_time">Current Time</string>
    <string name="string_current_location">Current Location</string>
    <string name="string_send_report">Report</string>
    <string name="string_cancel_report">Cancel</string>
    <string name="string_patv">PATV</string>
    <string name="string_nplv">NPLV</string>
    <string name="string_npav">NPAV</string>
    <string name="string_moderate">Moderate</string>
    <string name="string_heavy">Heavy</string>
    <string name="string_standstill">Standstill</string>
    <string name="string_block_lane">Number of lanes blocked</string>
    <string name="string_block_lane_1">1 Lane</string>
    <string name="string_block_lane_2">2 Lanes</string>
    <string name="string_block_lane_3">More lanes</string>
    <string name="string_report_crime_to_police">Report A Crime</string>
    <string name="string_nearest_police_station">Nearest Police Station</string>
    <string name="string_police_address">Headquarters Address</string>
    <string name="string_police_number">Headquarters Number</string>
    <string name="string_report_fix_traffic_light">Traffic Light</string>
    <string name="string_report_fix_bumpy_road">Bumpy Road</string>
    <string name="string_report_fix_street_light">Street Light</string>
    <string name="string_enter_first_name">Your First Name</string>
    <string name="string_enter_last_name">Your Last Name</string>
    <string name="string_enter_email">Your Email</string>
    <string name="string_enter_password">Enter a Password</string>
    <string name="string_confirm_password">Confirm Password</string>
    <string name="string_create_account">Create My Viaje Account</string>
    <string name="string_close_button_report">Close report incident button</string>
    <string name="string_send_report_button">Send your report</string>
    <string name="string_cancel_report_button">Cancel your report</string>
    <string name="string_report_collision_description">Report collision within your area</string>
    <string name="string_report_crime_description">Report crime within your area</string>
    <string name="string_report_flood_description">Report flood within your area</string>
    <string name="string_report_construction_description">Report what needs to be fixed</string>
    <string name="string_report_roadblock_description">Report a road block</string>
    <string name="string_report_traffic_description">Report traffic situation within your area</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="title_activity_sample_log_in">SampleLogIn</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="error_password_unmatch">Passwords do not match</string>
    <string name="error_invalid_name">Invalid name (must be 4–200 chars)</string>
    <string name="error_invalid_pass_length">Invalid password (must be 8–100 chars)</string>
    <string name="menu_delete">Delete</string>
    <string name="string_mabuhay">Mabuhay!</string>
    <string name="string_thankyou">Thank you for choosing Viaje as your companion for commuting around the Metro Manila.</string>
    <string name="string_instruction">If you want to know more about Viaje, press NEXT</string>
    <string name="string_Viaje">Viaje!</string>
    <string name="string_getting_started">Getting Started</string>
    <string name="string_enter_your_destination">We will help you choose the best route to use when commuting in Metro Manila. Just tell us the location of your origin and destination.</string>
    <string name="string_choose_criteria">Choosing Your Route</string>
    <string name="string_choosing_criteria">Then, you may choose if you want the shortest, the cheapest or the most stress-free route.</string>
    <string name="string_check_map">Checking the Route</string>
    <string name="string_checking_map">You may also check the other alternate routes by swiping through the categories. And if you are satisfied, you may save the route or add it to your favorites.</string>
    <string name="string_saving_route">Saved Routes</string>
    <string name="string_saving_routetext">From the navigation drawer, you may access your saved routes. With this, you can still access your routes even if you are offline!</string>
    <string name="string_reporting_incidents">Reporting Incidents</string>
    <string name="string_reporting_incidentstext">Clicking the message button on the upper right corner will allow you to report various incidents that may occur in the streets of Metro Manila.</string>
    <string name="string_report_incident_in_map">You may view the reported incidents in the map.</string>
    <string name="string_live_stats_instruction">Lastly, you may view different information that you and other users of Viaje in the Statistics page.</string>
    <string name="string_navigation">Navigation within Viaje</string>
    <string name="string_enjoy">Enjoy!</string>
    <string name="string_statstext">While using our app, be sure to check how much you\'ve saved and how far you\'ve travelled. Just click your username in the nav drawer!</string>
    <string name="string_user_email">email@address.com</string>
    <string name="string_setting_display_incident_description">Reported incidents are displayed on map</string>
    <string name="tell_us">Tell us who you are</string>
    <string name="account_details">Tell us your Viaje account details</string>
    <string name="traffic_data_opts_text">How do you want Viaje to obtain traffic data for your route?\n\nNote: Using "Current" Data requires an active internet connection.</string>
    <string name="traffic_data_opts_text_offline">Do you want Viaje to use historical data to obtain traffic data?</string>
    <string name="use_current_data_btnText">Use Current Data</string>
    <string name="use_hist_data_btnText">Use Historical Data</string>
    <string name="use_no_data_btnText">Dont Use Data</string>
    <string name="hist_data_titlebar_text">Historical Data Options</string>
    <string name="hist_data_blurb">Choose the conditions to be used as basis for obtaining historical traffic data:</string>
    <string name="day_of_wk_prompt">Select the day of week</string>
    <string name="time_of_day_prompt">Select the time of day</string>
    <string name="weather_prompt">Select a weather condition</string>
    <string-array name="day_of_wk_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>