<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_report_collision"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="6dp"
    android:layout_margin="10dp"
    android:background="@drawable/background_collision_popup"
    tools:context=".ShowReportIncidentPopUp" >
    
    <TextView
        android:id="@+id/ReportTitle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/string_report_collision"
        android:layout_centerHorizontal="true"
        android:textColor="@color/ViajeWhite"
        android:background="@color/ViajeGray"
        android:textSize="22sp" />
    
    <RelativeLayout 
	    android:id="@+id/popup_main"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="6dp"
	    android:paddingRight="6dp"
	    android:layout_below="@+id/ReportTitle"
	    android:background="@null">

	    
	    <Button
	        android:id="@+id/button_collision_minor"
	        android:text="@string/string_minor_collision" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="2dp"
	        android:paddingBottom="2dp"	        
	        android:textSize="12sp"
	        android:layout_alignParentLeft="true"
	        
	        android:clickable="true"
	        android:contentDescription="@string/desc_find_route"
	        android:background="@drawable/background_report_button_selector"
	        android:drawableTop="@drawable/ic_report_incident_collision_minor" />
	    
	    <Button
	        android:id="@+id/button_collision_major"
	        android:text="@string/string_major_collision" 
	        android:textSize="12sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="2dp"
	        android:paddingBottom="2dp"
	        android:layout_toRightOf="@+id/button_collision_minor"
	        android:background="@drawable/background_report_button_selector"
	        android:clickable="true"
	        android:contentDescription="@string/desc_find_route"
	        android:drawableTop="@drawable/ic_report_incident_collision_major" />
	    
	    <ImageView
	        android:id="@+id/locator"
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:layout_marginTop="2dp"
	        android:background="@null"
	        android:contentDescription="@string/desc_find_route"
	        android:layout_below="@+id/button_collision_minor"
	        android:src="@drawable/ic_edittext_locator" />
	    
	    <TextView
	        android:id="@+id/location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="2dp"
	        android:text="@string/string_current_location"
	        android:layout_below="@+id/button_collision_minor"
	        android:layout_toRightOf="@+id/locator"
	        android:fontFamily="sans-serif-light"/>
	    
	    <ImageView
	        android:id="@+id/watch"
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:background="@null"
	        android:contentDescription="@string/desc_find_route"
	        android:layout_below="@+id/locator"
	        android:src="@drawable/ic_criteria_less_time_gray" />
	    
	    <TextView
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/string_current_time"
	        android:layout_below="@+id/location"
	        android:layout_toRightOf="@+id/watch"
	        android:fontFamily="sans-serif-light"/>
    </RelativeLayout>
    
    <LinearLayout
	    android:layout_width="190dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_below="@+id/popup_main"
	    android:layout_marginTop="4dp"
	    android:background="@null"
	    android:weightSum="2">
    
	    <Button
	        android:id="@+id/button_send"
	        android:text="@string/string_send_report" 
	        android:textSize="18sp"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"	     
	        android:clickable="true"
	        android:background="@drawable/background_send_report_selector"
	        android:layout_gravity="center"
	        android:contentDescription="@string/desc_find_route"
	        android:layout_weight="1"
	        android:fontFamily="sans-serif-light"/>
	    
  	    <Button
	        android:id="@+id/button_cancel"
	        android:text="@string/string_cancel_report" 
	        android:textSize="18sp"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"     	        
	        android:clickable="true"
	        android:background="@drawable/background_cancel_selector"
	        android:layout_gravity="center"
	        android:contentDescription="@string/desc_find_route"
	        android:layout_weight="1"
	        android:fontFamily="sans-serif-light"/>
	    
    </LinearLayout>

</RelativeLayout>