<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_register"
    tools:context=".RegisterUser" >
    
<!--     <ImageView -->
<!--         android:id="@+id/icon_jeepney" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginLeft="42dp" -->
<!--         android:layout_marginRight="8dp" -->
<!--         android:layout_marginBottom="8dp" -->
<!--         android:src="@drawable/ic_jeepney" -->
<!--         /> -->
	      <TextView 
	    	   android:id="@+id/title_name"
	       	   android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="40dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
        	   android:textSize="16sp"
        	   android:textColor="@color/ViajeWhite"
	           android:fontFamily="sans-serif-light"
        	   android:text="@string/tell_us"/>
    <RelativeLayout
        android:id="@+id/fillup_personal_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/title_name"
        android:background="@drawable/background_white">        
        
           <EditText
	           android:id="@+id/fillup_first_name"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="8dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
	           android:hint="@string/string_enter_first_name"
	           android:textColor="@color/ViajeGray"
	           android:fontFamily="sans-serif-light"
	           android:maxLines="1"
	           android:singleLine="true" />
           
            <EditText
	           android:id="@+id/fillup_last_name"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/fillup_first_name"
	           android:layout_marginTop="8dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
	           android:hint="@string/string_enter_last_name"
	           android:textColor="@color/ViajeGray"
	           android:fontFamily="sans-serif-light"
	           android:maxLines="1"
	           android:singleLine="true" />
        
    </RelativeLayout>
    
	<TextView 
	  android:id="@+id/title_contact"
	  android:layout_below="@+id/fillup_personal_section"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="8dp"
	  android:layout_marginLeft="8dp"
	  android:layout_marginRight="8dp"
	  android:textSize="16sp"
	  android:textColor="@color/ViajeWhite"
	  android:fontFamily="sans-serif-light"
	  android:text="@string/account_details"/>
    
    <RelativeLayout
        android:id="@+id/fillup_account_section"
        android:layout_below="@+id/title_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:background="@drawable/background_white">
                  
            <EditText
	           android:id="@+id/fillup_email"	           
	           android:inputType="textEmailAddress"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="8dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
	           android:hint="@string/string_enter_email"
	           android:textColor="@color/ViajeGray"
	           android:fontFamily="sans-serif-light"
	           android:maxLines="1"
	           android:singleLine="true" />
            
           <EditText
	           android:id="@+id/fillup_password"
	           android:inputType="textPassword"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/fillup_email"
	           android:layout_marginTop="8dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
	           android:hint="@string/string_enter_password"
	           android:textColor="@color/ViajeGray"
	           android:fontFamily="sans-serif-light"
	           android:maxLines="1"
	           android:singleLine="true" />
           
           <EditText
	           android:id="@+id/fillup_confirm_password"
	           android:inputType="textPassword"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_below="@+id/fillup_password"
	           android:layout_marginTop="8dp"
	           android:layout_marginLeft="8dp"
        	   android:layout_marginRight="8dp"
	           android:hint="@string/string_confirm_password"
	           android:textColor="@color/ViajeGray"
	           android:fontFamily="sans-serif-light"
	           android:maxLines="1"
	           android:singleLine="true" />
        
    </RelativeLayout>
    
    <Button 
        android:id="@+id/btn_register"
        android:layout_below="@+id/fillup_account_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/background_sign_up_selector"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/ViajeWhite"
        android:text="@string/string_create_account"/>

</RelativeLayout>
